[package]
name = "sumikko-brain"
version = "0.1.0"
authors = ["UniUrchin <85057870+UniUrchin@users.noreply.github.com>"]
edition = "2018"
default-run = "sumikko-brain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "convert"
path = "utils/convert.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
rand = "0.6.1"
regex = "1.8.1"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
